[PD-1]Fix grid alignment using flexGrid ibx control.

--- a/src/main/resources/META-INF/resources/ibx/resources/css/grid.ibx.css
+++ b/src/main/resources/META-INF/resources/ibx/resources/css/grid.ibx.css
@@ -34,7 +34,6 @@
 	position:relative;
 	flex:0 1 auto;
 	box-sizing:border-box;
-	padding:0px;
 }
 
 
